fixed intro animation mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1004,7 +1004,7 @@ video {
   .intro-text {
     font-size: 1.25rem;
     letter-spacing: 0.1rem;
-    margin-left: 100;
+    margin-left: 100px;
   }
   /* -------PROJECT PAGES-------- */
   .contentContainer {
